# extralessons

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  context_processors.py  forms.py  models.py  permissions.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/catalog/: admin.py  images.py  models.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py
apps/dashboards/: admintools_urls.py  admintools_views.py  parent_urls.py  parent_views.py  provider_urls.py  provider_views.py
apps/enrollments/: admin.py  models.py  services.py
apps/enrollments/migrations/: 0001_initial.py
apps/notifications/: admin.py  models.py  services.py  worker.py
apps/notifications/channels/: base.py  email.py  whatsapp.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py  test.py
extralessons.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/css/: main.css
templates/: base.html
templates/catalog/: catalogue.html  class_detail.html
templates/registration/: invite_accept.html  invite_landing.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
tests/: factories.py  test_admin_tools.py  test_capacity_race.py  test_enrollment_services.py  test_happy_path.py  test_images_and_attendance_history.py  test_notifications.py  test_provider_dashboard.py  test_review_fixes.py  test_views.py
(+19 files in other folders)
